fix(Toast component): moved toasts to more visible location, switched to bootstrap colors, and made

--- a/src/app/fte-entry/employee/fte-entry.component.css
+++ b/src/app/fte-entry/employee/fte-entry.component.css
@@ -35,10 +35,6 @@ div.col-custom.col-slider {
   float: right;
 }
 
-/* .btn-fte-toolbar:hover {
-  background-color: rgb(138, 147, 155);
-} */
-
 
 
 table.slider-header {
